Bug 92443 - And again - no visible menu entrys and empty dialogs
Summary: And again - no visible menu entrys and empty dialogs
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.0.2 rc
Hardware: x86 (IA32) Windows (All)
: medium critical
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0 target:5.0.0.3
Keywords:
: 92432 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-30 07:39 UTC by Thomas Krumbein
Modified: 2016-10-25 19:24 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Exampel file (contains macros!) (22.80 KB, application/vnd.oasis.opendocument.graphics)
2015-06-30 07:39 UTC, Thomas Krumbein
Details
no visual menu-entrys (80.77 KB, image/jpeg)
2015-06-30 07:40 UTC, Thomas Krumbein
Details
empty frame on Win 8.1 (36.30 KB, image/jpeg)
2015-06-30 07:41 UTC, Thomas Krumbein
Details
Open the attached Writer-document. Menue couldn't be opened while colored button appears. (8.92 KB, application/vnd.oasis.opendocument.text)
2015-06-30 09:27 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Krumbein 2015-06-30 07:39:50 UTC
Created attachment 116941 [details]
Exampel file (contains macros!)

Again with LibO RC2 (32 bit) on Win 8.1 64 bit. (regression)

After opening a complex file (attached) Menu-entrys are empty (see Screenshot) - new Windows/frames are empty too.

This is a rendering problem - I have done a similar bug-report some weeks ago - but cannot find him again.

After some time (2 to 5 min) sometimes the menues will work as expected - never after opening the file!

Test on two different machines (Win 8.1 64 bit) with LibO 5.0.0.2 (32 bit), 5.0.0.1 (32bit), 5.0.0.1 beta (64 bit).

Everything works ok with versions 4.4.x (32 bit)!!

This is unusable for normal users - cannot
Comment 1 Thomas Krumbein 2015-06-30 07:40:56 UTC
Created attachment 116942 [details]
no visual menu-entrys
Comment 2 Thomas Krumbein 2015-06-30 07:41:26 UTC
Created attachment 116943 [details]
empty frame on Win 8.1
Comment 3 Robert Großkopf 2015-06-30 09:27:47 UTC
Created attachment 116949 [details]
Open the attached Writer-document. Menue couldn't be opened while colored button appears.

Open the attached Writer-file.
Try to open any menue.
Doesn't work here with OpenSUSE 13.2 64bit rpm Linux.
Scroll down so the button couldn't be seen on the screen.
Try to open the menue.
Works right.

This is the same behavior as shown by the attachment of Thomas. Could be there is a little difference between Windows and Linux.

When changing the color of the buttons to "Default" menues could be opened.
Comment 4 Miklos Vajna 2015-06-30 11:18:54 UTC
bibisect-50max says:

There are only 'skip'ped commits left to test.
The first bad commit could be any of: 2b779097547b73821dd2dcb3019b140f95c5ad5f ebca9a4a9cacfa81e2a7b20781b9a87df5b8b12c
We cannot bisect more!

$ git log -1 2b779097547b73821dd2dcb3019b140f95c5ad5f
commit 2b779097547b73821dd2dcb3019b140f95c5ad5f
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Wed May 27 22:44:58 2015 +0800

    source-hash-8df18ef063e6de2cbc701b1f932bf8e872fcea22
    
    Bibisect: This commit covers the following source commit(s) which failed to build
    a0200bd844f151dcfa992e13079396bc8d3013de
    31c76ba57488f4ddce13c1974e9eb9ee80621ffc
    9e0bc2685a427ff6dfae637c7d4260817c3b4700
    32a776c83b86db3efaa7177c479e9327f28fbf46
    3906f4cf754835bf7e31a2138188767503560831
    5485ef70cee1e3a743047f95ce94533024004b7c
    8df18ef063e6de2cbc701b1f932bf8e872fcea22
    
    commit 8df18ef063e6de2cbc701b1f932bf8e872fcea22
    Author:     Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>
    AuthorDate: Wed May 6 11:57:31 2015 +0900
    Commit:     Jan Holesovsky <kendy@collabora.com>
    CommitDate: Thu May 7 09:57:49 2015 +0200
    
        Refactor "Slider" - use RenderContext & Invalidate
    
        Change-Id: I3c733ac46b89b0a6b413eadf2796b80ec033c2c9

$ git log -1 ebca9a4a9cacfa81e2a7b20781b9a87df5b8b12c
commit ebca9a4a9cacfa81e2a7b20781b9a87df5b8b12c
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Wed May 27 22:45:03 2015 +0800

    source-hash-f906d11632fe4958d76306586772eb9c931a2a6e
    
    commit f906d11632fe4958d76306586772eb9c931a2a6e
    Author:     Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>
    AuthorDate: Wed May 6 12:14:52 2015 +0900
    Commit:     Jan Holesovsky <kendy@collabora.com>
    CommitDate: Thu May 7 09:57:49 2015 +0200
    
        missing ToolBox include changes
    
        Change-Id: I13252ac17fd4fca96992bf48c8dbdebd01c479dc

So most probably a regression from 8df18ef063e6de2cbc701b1f932bf8e872fcea22.
Comment 5 Miklos Vajna 2015-06-30 11:24:21 UTC
Oh, and not specific to Windows, 'SAL_USE_VCLPLUGIN=gtk' (gtk2) / Linux is a reproducer, too.
Comment 6 Tomaz Vajngerl 2015-07-02 00:05:20 UTC
Invisible menus are not the "cause" but "effect". The cause is the button, which creates an invalidation loop somewhere (easy to see with a debugger).
Comment 7 Miklos Vajna 2015-07-02 08:35:14 UTC
Ah yes, I see now. I'll take care of this.
Comment 8 Commit Notification 2015-07-02 10:11:38 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b45040d1ec1a0b765f1b2284fffaed2b17b6227b

tdf#92443 PushButton::ImplDrawPushButtonFrame: fix Invalidate() loop

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2015-07-02 12:20:50 UTC
*** Bug 92432 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2015-07-03 08:55:35 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=64b4ed9de3852494416cdcb8c25d2e24fc4d0253&h=libreoffice-5-0

tdf#92443 PushButton::ImplDrawPushButtonFrame: fix Invalidate() loop

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.