tdf#92443 PushButton::ImplDrawPushButtonFrame: fix Invalidate() loop

Regression from commit 32a776c83b86db3efaa7177c479e9327f28fbf46
(Refactor Buttons to use RenderContext when painting, 2015-05-05), the
problem was that we started to call vcl::Window::SetSettings(), which
invokes Invalidate(), which should not happen, since we're in Paint().

Fix this by restoring the old behavior of calling
OutputDevice::SetSettings() directly again.

Change-Id: I57c8e7947764e8cdc2d144be2dd140d3c408255d
(cherry picked from commit b45040d1ec1a0b765f1b2284fffaed2b17b6227b)